# colorfulist

./: .gitignore  README.md  pyproject.toml  tox.ini
src/colorfulist/: __init__.py  colorfulist.py
tests/: testit.py
