[build-system]

build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
  "termcolor"
]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "colorfulist"
description = "Colorful formatting for workaround lists in terminal and IPython Notebooks"
readme = "README.md"
keywords = [
  "ANSI",
  "ANSI color",
  "ANSI colour",
  "color",
  "colour",
  "formatting",
  "termcolor",
  "terminal",
  "iterable",
  "visual",
  "highlight"
]

license = {text = "MIT"}
maintainers = [{name = "Yuri Konoplev"}]
authors = [{name = "Yuri Konoplev", email = "juri.konoplev@gmail.com"}]
requires-python = ">=3.7"
dynamic = [
  "version",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Terminals",
]

[project.optional-dependencies]
tests = [
]

[project.urls]
Changelog = "https://github.com/j0k/colorfulist/releases"
Homepage = "https://github.com/j0k/colorfulist"
Source = "https://github.com/j0k/colorfulist"


[tool.black]
target_version = ["py37"]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/colorfulist/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
